# PixCI

./: .gitignore  BUILD_GUIDE.md  README.md  aaa_mushroom.py  aaa_mushroom_advanced.py  aaa_mushroom_perfect_selout.py  build.bat  build_exe.py  build_requirements.txt  cli.py  coal.txt  coal_code.py  coal_script.py  core.py  demo_ai_native.py  demo_v3.py  iron_sword_script.py  llms-pixci.txt  llms-pxvg-workflow.txt  llms-python.txt  llms.txt  magic_mushroom.py  mushroom_final.py  pixci-cli.spec  pixci_gui.py  pyproject.toml  sword_code.py  test.pxvg.xml  test.py  test_anim.pxvg.xml  test_anim_py.py  test_coal.pxvg  test_encode.pxvg  test_encoded.py  test_sword.pxvg.xml
.palette_cache/: endesga-32.json  oil-6.json  slso8.json
pixci-web/backend/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  run.py
pixci-web/backend/app/: __init__.py  main.py
pixci-web/backend/app/api/v1/: __init__.py  decode.py  encode.py  health.py
pixci-web/backend/app/core/: config.py  exceptions.py  logging.py
pixci-web/backend/app/models/: schemas.py
pixci-web/backend/app/services/: file_service.py  pixci_service.py
pixci-web/backend/pixci/: __init__.py  cli.py
pixci-web/backend/pixci/DINING RESOURCES/: blocks.json  manifest.json
pixci-web/backend/pixci/DINING RESOURCES/models/blocks/: bowl.geo.json  chair1.geo.json  deco1.geo.json  deco2.geo.json  dining_light.geo.json  dining_table1.geo.json  food1.geo.json  mossy01.geo.json  mossy_table.geo.json  wooden_mug.geo.json
pixci-web/backend/pixci/DINING RESOURCES/texts/: en_US.lang
pixci-web/backend/pixci/DINING RESOURCES/textures/: terrain_texture.json
pixci-web/backend/pixci/core/: __init__.py  canvas_base.py  grid_engine.py  prompts.py  pxvg_engine.py
pixci-web/backend/pixci/core/geo3d/: README.md  __init__.py  canvas3d.py  decoder.py  encoder.py  parser.py  prompts.py
pixci-web/backend/pixci/core/mixins/: __init__.py  postprocess.py  transform.py
pixci-web/backend/pixci/styles/: __init__.py
(+77 files in other folders)
