[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixci"
version = "1.0.0"
description = "Công cụ CLI trung gian chuyển đổi Ảnh Pixel sang Text cho LLMs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "pillow>=10.0.0",
    "rich>=13.0.0"
]

[project.scripts]
pixci = "pixci.cli:app"

[tool.setuptools]
packages = ["pixci", "pixci.core"]
